Wstrzymanie wersji mobilnej.

--- a/src/app/o-mnie/o-mnie.component.html
+++ b/src/app/o-mnie/o-mnie.component.html
@@ -1,7 +1,7 @@
 <div class="about-me-bg">
     <div class="row">
         <div class="col col-sm">
-            <svg-icon [svgStyle]="watermarkStyle" src="assets/logo.svg"></svg-icon>
+            <svg-icon [svgStyle]="watermarkStyle" src="assets/logo.svg" href="#dashboard"></svg-icon>
             <div class="container" class="about-me">
                 <div class="row">
                     <h2 class="header-about-me">O mnie</h2>
