--- a/src/app/portfolio/grafit/grafit.component.html
+++ b/src/app/portfolio/grafit/grafit.component.html
@@ -1,7 +1,8 @@
 <div class="bg">
     <div class="row">
         <div class="col-xl-6 col-12">
-            <svg-icon [svgStyle]="watermarkStyle" src="assets/logo.svg"></svg-icon>
+
+            <svg-icon class="watermark" [svgStyle]="watermarkStyle"  href="#dashboard" src="assets/logo.svg"></svg-icon>
             <div class="image-wrapper wizytowki-mockup">
                 <img class="img-fluid animation img-wizytowki" src="assets/1_grafit/Grafit_wizyt¢wki_mockup.jpg" alt="">
             </div>
