--- a/src/app/portfolio/bh1/bh1.component.html
+++ b/src/app/portfolio/bh1/bh1.component.html
@@ -3,7 +3,7 @@
         <div class="col-xl-3">
             <div class="row">
                 <div class="col">
-                    <svg-icon [svgStyle]="watermarkStyle" src="assets/logo.svg"></svg-icon>
+                    <svg-icon [svgStyle]="watermarkStyle"  href="#dashboard" src="assets/logo.svg"></svg-icon>
                     <img class="bh-logo" src="assets/2%20bh1/boost%20high%20logo.svg" alt="">
                     <div class="text">
                         With Boost High company, that works at IT market I am bounded for a longer period of time.
