--- a/src/app/portfolio/bh2/bh2.component.html
+++ b/src/app/portfolio/bh2/bh2.component.html
@@ -39,7 +39,7 @@
 </div>
 <div class="d-block d-sm-none">
     <div class="row">
-        <svg-icon [svgStyle]="watermarkStyle" src="assets/logo.svg"></svg-icon>
+        <svg-icon [svgStyle]="watermarkStyle"  href="#dashboard" src="assets/logo.svg"></svg-icon>
     </div>
     <div class="row">
         <div class="col-4">
