--- a/src/app/portfolio/galeria/galeria.component.html
+++ b/src/app/portfolio/galeria/galeria.component.html
@@ -3,7 +3,7 @@
         <div class="bg-gallery">
             <div class="row">
                 <div class="col">
-                    <svg-icon [svgStyle]="watermarkStyle" src="assets/logo.svg"></svg-icon>
+                    <svg-icon [svgStyle]="watermarkStyle"  href="#dashboard" src="assets/logo.svg"></svg-icon>
                     <div class="title-subpage">Painting gallery</div>
                     <div class="text">My first website
                         while creating the very first website I was using the Wordpress software. It was my private
