--- a/src/styles.css
+++ b/src/styles.css
@@ -29,12 +29,7 @@ body {
     padding-left: 5%;
 }
 
-.watermark {
-    position: absolute;
-    max-height: 15vh;
-    padding: 3vh;
-    filter: opacity(0.6);
-}
+
 
 .animation {
     transition: transform .3s ease-out;
@@ -89,8 +84,8 @@ body {
     }
 
     .watermark {
-        padding: 0 0 2% 0!important;
-        max-height: 10vh!important;
+        /*padding: 0 0 2% 0!important;*/
+        /*max-height: 10vh!important;*/
     }
 }
 
@@ -103,3 +98,38 @@ body {
 .full{
     height: 100vh;
 }
+@keyframes heartbeat {
+    from {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        -webkit-transform-origin: center center;
+        transform-origin: center center;
+        -webkit-animation-timing-function: ease-out;
+        animation-timing-function: ease-out;
+    }
+    10% {
+        -webkit-transform: scale(0.91);
+        transform: scale(0.91);
+        -webkit-animation-timing-function: ease-in;
+        animation-timing-function: ease-in;
+    }
+    17% {
+        -webkit-transform: scale(0.98);
+        transform: scale(0.98);
+        -webkit-animation-timing-function: ease-out;
+        animation-timing-function: ease-out;
+    }
+    33% {
+        -webkit-transform: scale(0.87);
+        transform: scale(0.87);
+        -webkit-animation-timing-function: ease-in;
+        animation-timing-function: ease-in;
+    }
+    45% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+        -webkit-animation-timing-function: ease-out;
+        animation-timing-function: ease-out;
+    }
+}
+
