--- a/src/app/o-mnie/o-mnie.component.css
+++ b/src/app/o-mnie/o-mnie.component.css
@@ -16,6 +16,13 @@
     color: #707070 ;
     margin: 0 0 0 10%;
 }
+.text-contact-me{
+    color: #707070 ;
+    margin: 0;
+}
 .header-about-me{
     margin-left: 8%;
+}
+.icon-contact{
+    margin-right: 5%;
 }
