--- a/src/app/o-mnie/o-mnie.component.html
+++ b/src/app/o-mnie/o-mnie.component.html
@@ -4,7 +4,7 @@
             <svg-icon [svgStyle]="watermarkStyle" src="assets/logo.svg" href="#dashboard"></svg-icon>
             <div class="container" class="about-me">
                 <div class="row">
-                    <h2 class="header-about-me">O mnie</h2>
+                    <h2 class="header-about-me">About me</h2>
                 </div>
                 <div class="text text-about-me">
                     <p>I am Klaudia Szumacher a graphic designer and painter. My vast variety of skills is continuously
@@ -21,13 +21,13 @@
         <div class="col col-sm">
             <div class="container" class="about-me">
                 <div class="row">
-                    <h2 class="header-about-me">skontaktuj się ze mną</h2>
+                    <h2 class="header-about-me">contact me</h2>
                 </div>
-                <div class="text text-about-me">
-                    513-738-040
+                <div class="text text-contact-me">
+                    <svg-icon class="icon-contact" [svgStyle]="contactIcon" src="assets/icons/phone_icon.svg"></svg-icon>513-738-040
                 </div>
-                <div class="text text-about-me">
-                    szumacher.klaudia@gmail.com
+                <div class="text text-contact-me">
+                    <svg-icon class="icon-contact" [svgStyle]="contactIcon" src="assets/icons/mail_icon.svg"></svg-icon>szumacher.klaudia@gmail.com
                 </div>
             </div>
         </div>
