--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-<div class="d-none d-xl-block">
+<!--<div class="d-none d-xl-block">-->
     <router-outlet></router-outlet>
-</div>
-<div class="d-xl-none">
-    <div class="mobile-bg">
-        <div class="d-flex justify-content-center">
-            <p style="position:absolute; bottom:0; color: #fff; font-family: Real">Please, open website on your desktop or laptop.</p>
-        </div>
-    </div>
-</div>
+<!--</div>-->
+<!--<div class="d-xl-none">-->
+<!--    <div class="mobile-bg">-->
+<!--        <div class="d-flex justify-content-center">-->
+<!--            <p style="position:absolute; bottom:0; color: #fff; font-family: Real">Please, open website on your desktop or laptop.</p>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
