--- a/src/styles.css
+++ b/src/styles.css
@@ -4,6 +4,8 @@
     --navbar-color: #fff;
     --watermark-base: #707070;
     --watermark-base-bright: #fff;
+    --building-mock-width: 10%
+
 }
 
 body {
