--- a/src/app/common/tooltip-dot/tooltip-dot.component.html
+++ b/src/app/common/tooltip-dot/tooltip-dot.component.html
@@ -24,7 +24,7 @@
             <div class="row">
                 <div class="col-2"><img class="tooltip-img" *ngIf="image" src="assets/base/{{image}}" alt="">
                 </div>
-                <div class="col-10"><p>{{text}}</p>
+                <div class="col-10"><p class="left-dot-text">{{text}}</p>
                 </div>
             </div>
         </div>
