--- a/src/app/portfolio/bh2/bh2.component.css
+++ b/src/app/portfolio/bh2/bh2.component.css
@@ -1,24 +1,18 @@
 .koszulka {
     max-height: 100vh;
 }
-.scrum{
-    max-height: 100vh;
-    padding: 5%
-}
-
-.szara {
-    margin-top: 15vh
-}
-
-.czarna {
+.bh2-tshit-dot{
     position: absolute;
+}
+.szara{
+    margin-left:20%;
+    padding-left: 5%;
 
 }
 
 @media only screen and (max-width: 780px) {
     .szara {
-        margin-top: 5vh
-
+        margin-top: 5vh;
     }
 
     .watermark {
@@ -33,4 +27,268 @@
 }
 .title-subpage{
     margin-top: 4%;
+}
+html,body{
+    height: 100%;
+    background: #212121;
+    /*font-family: 'Ubuntu', sans-serif;*/
+    line-height: 24px;
+    letter-spacing: 1px;
+    font-size: 8px;
+}
+/*.item-hints{*/
+/*    height: 500px;*/
+/*    width: 500px;*/
+/*    margin: 250px auto;*/
+/*}*/
+/*.item-hints .hint {*/
+/*    width: 60px;*/
+/*    height: 60px;*/
+/*    margin: 150px auto;*/
+/*    position: relative;*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*}*/
+
+
+/*.item-hints .hint::before{ !* //rotated squre *!*/
+/*    background-color: #000;*/
+/*    width: 8px;*/
+/*    height: 8px;*/
+/*    z-index: 2;*/
+/*    -webkit-clip-path: polygon(50% 0,100% 50%,50% 100%,0 50%);*/
+/*    clip-path: polygon(50% 0,100% 50%,50% 100%,0 50%);*/
+/*    content: '';*/
+/*    position: absolute;*/
+/*    top: 50%;*/
+/*    left: 50%;*/
+/*    -webkit-transform: translate(-50%,-50%);*/
+/*    transform: translate(-50%,-50%);*/
+/*}*/
+.item-hints .hint::before{
+    background-color: #000;
+    width: 8px;
+    height: 8px;
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -moz-border-radius: 50%;
+    -webkit-border-radius: 50px;
+    border-radius: 50px;
+    -webkit-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+}
+
+.item-hints .hint::after{ /* //green glow */
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -webkit-transform: translate(-50%,-50%);
+    transform: translate(-50%,-50%);
+    border-radius: 50%;
+    width: 2px;
+    height: 2px;
+    z-index: 2;
+    -webkit-box-shadow: 0 0 50px 30px rgba(72,170,72,.3);
+    box-shadow: 0 0 50px 30px rgba(72,170,72,.3);
+    -webkit-animation: home_hero_item_hints_glow 2s cubic-bezier(.25,.1,.2,1) infinite;
+    animation: home_hero_item_hints_glow 2s cubic-bezier(.25,.1,.2,1) infinite;
+    -webkit-transition: opacity .5s ease;
+    transition: opacity .5s ease;
+}
+@-webkit-keyframes home_hero_item_hints_glow {
+    0% {
+        -webkit-box-shadow: 0 0 30px 5px #48aa48;
+        box-shadow: 0 0 30px 5px #48aa48
+    }
+    70% {
+        -webkit-box-shadow: 0 0 70px 50px rgba(72, 170, 72, 0);
+        box-shadow: 0 0 70px 50px rgba(72, 170, 72, 0)
+    }
+    100% {
+        -webkit-box-shadow: 0 0 0 50px rgba(72, 170, 72, 0);
+        box-shadow: 0 0 0 50px rgba(72, 170, 72, 0)
+    }
+}
+@keyframes home_hero_item_hints_glow {
+    0% {
+        -webkit-box-shadow: 0 0 30px 5px #48aa48;
+        box-shadow: 0 0 30px 5px #48aa48
+    }
+    70% {
+        -webkit-box-shadow: 0 0 70px 50px rgba(72, 170, 72, 0);
+        box-shadow: 0 0 70px 50px rgba(72, 170, 72, 0)
+    }
+    100% {
+        -webkit-box-shadow: 0 0 0 50px rgba(72, 170, 72, 0);
+        box-shadow: 0 0 0 50px rgba(72, 170, 72, 0)
+    }
+}
+/*.item-hints .hint-dot {*/
+/*    z-index: 3;*/
+/*    border: 1px solid #000;*/
+/*    border-radius: 50%;*/
+/*    width: 60px;*/
+/*    height: 60px;*/
+/*    display: block;*/
+/*    -webkit-transform: translate(-0%,-0%) scale(.95);*/
+/*    transform: translate(-0%,-0%) scale(.95);*/
+/*    -webkit-animation: home_hero_item_hints_border 2s linear infinite;*/
+/*    animation: home_hero_item_hints_border 2s linear infinite;*/
+/*    margin: auto;*/
+/*}*/
+@-webkit-keyframes home_hero_item_hints_border {
+    0%,
+    100% {
+        border-color: rgba(255, 255, 255, .6);
+        -webkit-transform: translate(-50%, -50%) scale(.95);
+        transform: translate(-0%, -0%) scale(.95)
+    }
+    50% {
+        border-color: rgba(255, 255, 255, .3);
+        -webkit-transform: translate(-50%, -50%) scale(1);
+        transform: translate(-0%, -0%) scale(1)
+    }
+}
+@keyframes home_hero_item_hints_border {
+    0%,
+    100% {
+        border-color: rgba(255, 255, 255, .6);
+        -webkit-transform: translate(-50%, -50%) scale(.95);
+        transform: translate(-0%, -0%) scale(.95)
+    }
+    50% {
+        border-color: rgba(255, 255, 255, .3);
+        -webkit-transform: translate(-50%, -50%) scale(1);
+        transform: translate(-0%, -0%) scale(1)
+    }
+}
+/*shadowbox po najechaniu*/
+.item-hints .hint-radius {
+    background-color: rgba(255,255,255,0.1);
+    border-radius: 50%;
+    width: 250px;
+    height: 250px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin: -125px 0 0 -125px;
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    -webkit-transition-property: background-color,opacity,visibility,-webkit-transform;
+    transition-property: background-color,opacity,visibility,-webkit-transform;
+    transition-property: background-color,opacity,visibility,transform;
+    transition-property: background-color,opacity,visibility,transform,-webkit-transform;
+    -webkit-transition-duration: .5s;
+    transition-duration: .5s;
+    -webkit-transition-timing-function: ease,ease,ease,cubic-bezier(.5,0,0,1);
+    transition-timing-function: ease,ease,ease,cubic-bezier(.5,0,0,1);
+}
+.item-hints .hint:hover .hint-radius {
+    opacity: 1;
+    visibility: visible;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+}
+.item-hints .hint[data-position="1"] .hint-content {
+    top: 85px;
+    left: 50%;
+    margin-left: 56px;
+}
+.item-hints .hint-content {
+    color: #000;
+    width: 600px;
+    position: absolute;
+    z-index: 5;
+    padding: 12px 0;
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: opacity .7s ease,visibility .7s ease;
+    transition: opacity .7s ease,visibility .7s ease;
+    pointer-events: none;
+    color: #000;
+    visibility: hidden;
+    pointer-events: none
+}
+.item-hints .hint:hover .hint-content {
+    color: #000;
+    width: 600px;
+    position: absolute;
+    z-index: 5;
+    padding: 12px 0;
+    opacity: 1;
+    visibility: visible !important;
+    -webkit-transition: opacity .7s ease,visibility .7s ease;
+    transition: opacity .7s ease,visibility .7s ease;
+    pointer-events: none;
+    color: #000;
+    visibility: hidden;
+    pointer-events: none
+}
+.item-hints .hint-content::before {
+    width: 0px;
+    bottom: 0;
+    left: 0;
+    content: '';
+    background-color: #000;
+    height: 1px;
+    position: absolute;
+    transition: width 0.4s;
+}
+/*szerokość podkreślenia*/
+.item-hints .hint:hover .hint-content::before {
+    width: 408px;
+    transition: width 0.4s;
+}
+.item-hints .hint-content::after {
+    -webkit-transform-origin: 0 50%;
+    transform-origin: 0 50%;
+    -webkit-transform: rotate(135deg);
+    transform: rotate(135deg);
+    top: 333px;
+    right: -413px;
+    width: 355px;
+    content: '';
+    background-color: #000;
+    height: 1px;
+    position: absolute;
+    opacity: 1;
+    -webkit-transition: opacity .5s ease;
+    transition: opacity .5s ease;
+    transition-delay: 0s;
+    -webkit-transition-delay: 0s;
+    transition-delay: 0s;
+}
+.item-hints .hint:hover .hint-content::after {
+    opacity: 1;
+    visibility: visible;
+}
+.item-hints .hint[data-position="4"] .hint-content {
+    bottom: 85px;
+    left: 50%;
+    margin-left: 56px;
+}
+.item-hints .hint[data-position="2"] .hint-content {
+    bottom: 85px;
+    right: 50%;
+    margin-right: 56px;
+}
+.item-hints .hint[data-position="3"] .hint-content {
+    bottom: -250px;
+    right: 0;
+    margin-right: 56px;
+}
+.dot{
+    position: absolute;
+    top:60%;
+    left:46%;
+}
+.scrum-bh{
+    max-width: 75%;
+    max-height: 75%;
 }
