--- a/src/app/portfolio/bh2/bh2.component.html
+++ b/src/app/portfolio/bh2/bh2.component.html
@@ -1,69 +1,94 @@
-<div class="d-none d-sm-block">
-    <div class="row full">
-        <div class="col">
-            <div class="row">
-                <div class="image-wrapper czarna">
-                    <img class="koszulka img-fluid animation" src="assets/3%20bh2/koszulka%20czarna.jpg" alt="">
-                </div>
-                <svg-icon [svgStyle]="watermarkStyle" src="assets/logo.svg"></svg-icon>
-            </div>
-        </div>
-        <div class="col">
-            <div class="row">
-                <img class="scrum" src="assets/3%20bh2/scrum.svg" alt="">
-            </div>
-            <div class="row">
-                <div class="col-2"></div>
-                <div class="col-9">
+<!--<div class="d-none d-sm-block">-->
+<!--    <div class="row full">-->
+<!--        <div class="col">-->
+<!--            <div class="row">-->
+<!--                <div class="image-wrapper czarna">-->
+<!--                    <img class="koszulka img-fluid animation" src="assets/3%20bh2/koszulka%20czarna.jpg" alt="">-->
+<!--                </div>-->
+<!--                <svg-icon [svgStyle]="watermarkStyle" src="assets/logo.svg"></svg-icon>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="col">-->
+<!--            <div class="row">-->
+<!--                <img class="scrum" src="assets/3%20bh2/scrum.svg" alt="">-->
+<!--            </div>-->
+<!--            <div class="row">-->
+<!--                <div class="col-2"></div>-->
+<!--                <div class="col-9">-->
+<!--                    <div class="row">-->
+<!--                        <div class="title-subpage">BOOST HIGH</div>-->
+<!--                    </div>-->
+<!--                    <div class="row">-->
+<!--                        <div class="description">logo&brand</div>-->
+<!--                    </div>-->
+<!--                    <div class="row">-->
+<!--                        <div class="text">The winning design shows a humoristic version of an agile scrum process. It-->
+<!--                            decorates Boost High employee’s hoodies.-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="col-1"></div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="col">-->
+<!--            <div class="image-wrapper">-->
+<!--                <img class="koszulka szara img-fluid animation" src="assets/3%20bh2/koszulka.png" alt="">-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+<!--<div class="d-block d-sm-none">-->
+<!--    <div class="row">-->
+<!--        <svg-icon [svgStyle]="watermarkStyle"  href="#dashboard" src="assets/logo.svg"></svg-icon>-->
+<!--    </div>-->
+<!--    <div class="row">-->
+<!--        <div class="col-4">-->
+<!--            <div class="image-wrapper">-->
+<!--                <img class="koszulka img-fluid animation" src="assets/3%20bh2/koszulka%20czarna.jpg" alt="">-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="col-4">-->
+<!--            <div class="row">-->
+<!--                <img class="koszulka" src="assets/3%20bh2/scrum.svg" alt="">-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="col-4">-->
+<!--            <div class="image-wrapper">-->
+<!--                <img class="koszulka szara img-fluid animation" src="assets/3%20bh2/koszulka.png" alt="">-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--    <div class="row">-->
+<!--        <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis deserunt-->
+<!--            dicta-->
+<!--            dolore eaque eos et ex explicabo fugiat in labore laborum molestias necessitatibus odio-->
+<!--            placeat,-->
+<!--            quae, sint suscipit voluptatem voluptates.-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
+<div class="row">
+
+    <div class="col full">
+        <img class="koszulka szara img-fluid " src="assets/3%20bh2/koszulka.png" alt="">
+        <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i&display=swap"
+              rel="stylesheet">
+        <div class="item-hints dot">
+            <div class="hint" data-position="3"><!-- is-hint -->
+                <span class="hint-radius"></span>
+                <span class="hint-dot"></span>
+                <div class="hint-content do--split-children">
                     <div class="row">
-                        <div class="title-subpage">BOOST HIGH</div>
+                        <div class="col">
+                            <img class="scrum-bh" src="assets/3%20bh2/scrum.svg" alt="">
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="description">logo&brand</div>
-                    </div>
-                    <div class="row">
-                        <div class="text">The winning design shows a humoristic version of an agile scrum process. It
-                            decorates Boost High employee’s hoodies.
+                        <div class="col"><p style="max-width: 65%; position:relative">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet aperiam commodi consectetur dolor doloribus, eligendi eum ex hic magnam minus modi nesciunt odio, quas quis quo recusandae rem tenetur totam?</p>
                         </div>
                     </div>
                 </div>
-                <div class="col-1"></div>
             </div>
-        </div>
-        <div class="col">
-            <div class="image-wrapper">
-                <img class="koszulka szara img-fluid animation" src="assets/3%20bh2/koszulka.png" alt="">
-            </div>
-        </div>
-    </div>
-</div>
-<div class="d-block d-sm-none">
-    <div class="row">
-        <svg-icon [svgStyle]="watermarkStyle"  href="#dashboard" src="assets/logo.svg"></svg-icon>
-    </div>
-    <div class="row">
-        <div class="col-4">
-            <div class="image-wrapper">
-                <img class="koszulka img-fluid animation" src="assets/3%20bh2/koszulka%20czarna.jpg" alt="">
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="row">
-                <img class="koszulka" src="assets/3%20bh2/scrum.svg" alt="">
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="image-wrapper">
-                <img class="koszulka szara img-fluid animation" src="assets/3%20bh2/koszulka.png" alt="">
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis deserunt
-            dicta
-            dolore eaque eos et ex explicabo fugiat in labore laborum molestias necessitatibus odio
-            placeat,
-            quae, sint suscipit voluptatem voluptates.
         </div>
     </div>
 </div>
