--- a/src/app/portfolio/grafit/grafit.component.css
+++ b/src/app/portfolio/grafit/grafit.component.css
@@ -76,15 +76,16 @@
     max-width: 100vw;
 }
 .grafit-mockup-dot{
-    position: relative;
-    top: 10%;
-    left: 60%;
+    position: absolute;
+    top: 2%;
+    left: 43%;
 }
 .szyld-dot{
-    position: relative;
-    left: 255%;
-    bottom: 6%;
+    position: absolute;
+    right: 7%;
+    top: 40%;
 }
+
 
 .row{
     padding: 0 15%;
