--- a/src/app/portfolio/grafit/grafit.component.html
+++ b/src/app/portfolio/grafit/grafit.component.html
@@ -1,54 +1,12 @@
-<!--<div class="bg">-->
-<!--    <div class="row">-->
-<!--        <div class="col-xl-6 col-12">-->
-
-<!--            <svg-icon class="watermark" [svgStyle]="watermarkStyle"  href="#dashboard" src="assets/logo.svg"></svg-icon>-->
-<!--            <div class="image-wrapper wizytowki-mockup">-->
-<!--                <img class="img-fluid animation img-wizytowki" src="assets/1_grafit/Grafit_wizyt¢wki_mockup.jpg" alt="">-->
-<!--            </div>-->
-<!--            &lt;!&ndash;            <img class="watermark" src="assets/logo.svg" alt="">&ndash;&gt;-->
-<!--            <img class="grafit-logo d-xl-none" src="assets/1_grafit/logo%20grafit.svg" alt="">-->
-<!--        </div>-->
-<!--        <div class="col-xl-6 col-12">-->
-<!--            <div class="row">-->
-<!--                <div class="col-12">-->
-<!--                    <div class="row">-->
-<!--                        <div class="title-subpage">GrafIT</div>-->
-<!--                    </div>-->
-<!--                    <div class="row">-->
-<!--                        <div class="description">logo&brand</div>-->
-<!--                    </div>-->
-<!--                    <div class="row">-->
-<!--                        <div class="col-xl-9 ">-->
-<!--                            <div class="text">I have started cooperation with GrafIT brand from the very beginning,-->
-<!--                                including invention of brand’s name. I created the name basing on programmers jargon and-->
-<!--                                reffering to ‘brilliant code’. I also planned company’s color, logo and business cards.-->
-<!--                                As an addition to whole set I designed signboard for GrafIT’s potential headquarters.-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        <div class="col-xl-3 d-none d-xl-block">-->
-<!--                            <img class="grafit-logo" src="assets/1_grafit/logo%20grafit.svg" alt="">-->
-<!--                        </div>-->
-
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="row">-->
-<!--                <div class="image-wrapper office-mockup">-->
-<!--                    <img class="img-fluid animation" id="grafit-mock" src="assets/1_grafit/grafit%20szyld.jpg" alt="">-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
 <div class="grafit-bg">
     <div class="row">
         <div class="mockup-box">
             <img class="img img-fluid" src="assets/base/Grafit/Grafit_business_card.png" alt="">
-            <app-tooltip-dot class="grafit-mockup-dot" [image]="'Grafit/logo_grafit.svg'" [text]="descriptionLogo"></app-tooltip-dot>
-            <img class="grafit-building " src="assets/base/Grafit/grafit_szyld.jpg" alt="">
-            <app-tooltip-dot (mouseenter)="maximalizeImg()" (mouseleave)="minimalizeImg()" [orientation]="'left'" class="szyld-dot" [text]="descriptionBuilding"></app-tooltip-dot>
-
+            <app-tooltip-dot class="grafit-mockup-dot" [image]="'Grafit/logo_grafit.svg'" [direction]="'topRight'"
+                             [text]="descriptionLogo"></app-tooltip-dot>
+            <img class="grafit-building " src="assets/base/Grafit/grafit_szyld.jpg"  alt="">
+            <app-tooltip-dot (mouseenter)="maximalizeImg()" (mouseleave)="minimalizeImg()" [direction]="'topLeft'"
+                             class="szyld-dot" [text]="descriptionBuilding"></app-tooltip-dot>
         </div>
     </div>
 </div>
